Demo for @Transactional annotation

--- a/JAVA/Day 4/SpringFramework/src/main/resources/application.properties
+++ b/JAVA/Day 4/SpringFramework/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 
 notification.default.recipient=customer@company.com
-spring.profiles.active = QA
+spring.profiles.active = dev
 email.service.name=Production Email Service
