--- a/JAVA/Mini Project/Employee/src/main/resources/application.properties
+++ b/JAVA/Mini Project/Employee/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=Employee
 server.port=9090
 spring.profiles.active = prod
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+email.service.url=http://localhost:8080
+
 
