--- a/JAVA/Mini Project/Employee/src/main/resources/application.properties
+++ b/JAVA/Mini Project/Employee/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.profiles.active = prod
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 email.service.url=http://localhost:8080
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
 
 
