--- a/DevOps+GCP/FinalCapstoneProject/NotificationService/pom.xml
+++ b/DevOps+GCP/FinalCapstoneProject/NotificationService/pom.xml
@@ -78,6 +78,11 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Mail Sender -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
