--- a/DevOps+GCP/FinalCapstoneProject/UserService/pom.xml
+++ b/DevOps+GCP/FinalCapstoneProject/UserService/pom.xml
@@ -18,11 +18,18 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud-gcp.version>5.7.0</spring-cloud-gcp.version>
+		<spring-cloud.version>2023.0.0</spring-cloud.version>
 	</properties>
 
 
 
 	<dependencies>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter-data-spanner</artifactId>
+			<version>5.7.0</version>
+		</dependency>
 		<!-- Spring Core -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
